--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -1,4 +1,7 @@
 add_library(EngineFrakkas STATIC
+			${PROJECT_SOURCE_DIR}/lib/stb_image/stb_image.c
+			${PROJECT_SOURCE_DIR}/lib/miniaudio/miniaudio.c
+			${IMGUI_SOURCE_FILES}
 			src/game/entity_manager.cpp
         	src/game/transform.cpp
         	src/game/drawable.cpp
@@ -8,24 +11,23 @@ add_library(EngineFrakkas STATIC
             src/game/time_manager.cpp
             src/game/inputs_manager.cpp
 			src/game/light_component.cpp
-        	src/renderer/model.cpp
-        	src/renderer/light.cpp
+			src/renderer/model.cpp
+			src/game/sound_component.cpp
         	src/renderer/lowlevel/camera.cpp
 			src/renderer/lowlevel/lowrenderer.cpp
 			src/resources/program_shader.cpp
 			src/resources/resources_manager.cpp
 			src/resources/serializer.cpp
 			src/resources/texture.cpp
+			src/resources/sound.cpp
         	src/log.cpp
             src/engine.cpp
 	    	src/threadpool.cpp
-			${PROJECT_SOURCE_DIR}/lib/stb_image.c
-			${IMGUI_SOURCE_FILES}
 )
 
 target_include_directories(EngineFrakkas
                            PRIVATE include
-                           PRIVATE ${PROJECT_SOURCE_DIR}/lib
+                           PRIVATE ${LIB_INCLUDE_DIR}
                            PRIVATE ${MATHS_INCLUDE_DIR}
 						   PRIVATE ${GAME_INCLUDE_DIR}
 						   PRIVATE ${imgui_SOURCE_DIR}
