--- a/imgui.ini
+++ b/imgui.ini
@@ -15,8 +15,8 @@ Collapsed=0
 DockId=0x00000006,0
 
 [Window][Console]
-Pos=232,509
-Size=734,211
+Pos=232,421
+Size=734,299
 Collapsed=0
 DockId=0x00000002,1
 
@@ -34,7 +34,7 @@ DockId=0x00000002,0
 
 [Window][Scene]
 Pos=232,21
-Size=734,486
+Size=734,398
 Collapsed=0
 DockId=0x00000001,0
 
@@ -51,14 +51,14 @@ Collapsed=0
 DockId=0x00000004,1
 
 [Window][File Browser]
-Pos=232,509
-Size=734,211
+Pos=232,421
+Size=734,299
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][GameScene]
 Pos=232,21
-Size=734,486
+Size=734,398
 Collapsed=0
 DockId=0x00000001,1
 
@@ -68,8 +68,8 @@ Size=868,625
 Collapsed=0
 
 [Window][Debugger]
-Pos=232,509
-Size=734,211
+Pos=232,421
+Size=734,299
 Collapsed=0
 DockId=0x00000002,2
 
@@ -82,7 +82,7 @@ DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=80,111 Size=1280,699 Split=X
   DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=966,699 Split=X
     DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=230,699 Selected=0x29EABFBD
     DockNode    ID=0x00000007 Parent=0x00000003 SizeRef=734,699 Split=Y
-      DockNode  ID=0x00000001 Parent=0x00000007 SizeRef=1280,486 CentralNode=1 Selected=0xE192E354
-      DockNode  ID=0x00000002 Parent=0x00000007 SizeRef=1280,211 Selected=0x49278EEE
+      DockNode  ID=0x00000001 Parent=0x00000007 SizeRef=1280,398 CentralNode=1 Selected=0xE192E354
+      DockNode  ID=0x00000002 Parent=0x00000007 SizeRef=1280,299 Selected=0xE1830C86
   DockNode      ID=0x00000004 Parent=0x8B93E3BD SizeRef=312,699 Selected=0xE7039252
 
