--- a/editor/CMakeLists.txt
+++ b/editor/CMakeLists.txt
@@ -4,15 +4,16 @@ add_executable(EditorFrakkas
 			   ${IMGUI_BACKENDS_FILES}
 			   ${tracy_SOURCE_DIR}/TracyClient.cpp
                src/main.cpp
-        src/editor/editor_render.cpp
-        src/editor/hierarchy.cpp
-        src/editor/menu_bar.cpp
-        src/editor/file_browser.cpp
-        src/editor/console.cpp
-        src/editor/inspector.cpp
-        src/editor/scene.cpp
-        src/editor/game_scene.cpp
-        src/editor/debugger.cpp
+        	   src/editor/editor_render.cpp
+        	   src/editor/hierarchy.cpp
+        	   src/editor/menu_bar.cpp
+        	   src/editor/file_browser.cpp
+        	   src/editor/console.cpp
+        	   src/editor/inspector.cpp
+        	   src/editor/scene.cpp
+        	   src/editor/game_scene.cpp
+        	   src/editor/debugger.cpp
+			   ${imguizmo_SOURCE_DIR}/ImGuizmo.cpp
                src/helpers/game_edit.cpp
 )
 
@@ -32,6 +33,7 @@ target_include_directories(EditorFrakkas
 						   PRIVATE ${imgui_SOURCE_DIR}
                            PRIVATE ${imgui_SOURCE_DIR}/backends
 						   PRIVATE ${tracy_SOURCE_DIR}
+						   PRIVATE ${imguizmo_SOURCE_DIR}
 )
 
 set_target_properties(EditorFrakkas PROPERTIES
