--- a/imgui.ini
+++ b/imgui.ini
@@ -16,13 +16,13 @@ DockId=0x00000005,0
 
 [Window][Console]
 Pos=238,468
-Size=733,252
+Size=732,252
 Collapsed=0
 DockId=0x00000002,1
 
 [Window][Inspector]
-Pos=973,21
-Size=307,699
+Pos=972,21
+Size=308,699
 Collapsed=0
 DockId=0x00000004,0
 
@@ -34,7 +34,7 @@ DockId=0x00000002,0
 
 [Window][Scene]
 Pos=238,21
-Size=733,445
+Size=732,445
 Collapsed=0
 DockId=0x00000001,0
 
@@ -45,20 +45,20 @@ Collapsed=0
 DockId=0x00000001,1
 
 [Window][Dear ImGui Demo]
-Pos=973,21
-Size=307,699
+Pos=972,21
+Size=308,699
 Collapsed=0
 DockId=0x00000004,1
 
 [Window][File Browser]
 Pos=238,468
-Size=733,252
+Size=732,252
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][GameScene]
 Pos=238,21
-Size=733,445
+Size=732,445
 Collapsed=0
 DockId=0x00000001,1
 
@@ -69,20 +69,36 @@ Collapsed=0
 
 [Window][Debugger]
 Pos=238,468
-Size=733,252
+Size=732,252
 Collapsed=0
 DockId=0x00000002,2
+
+[Window][Create new component?]
+Pos=491,318
+Size=297,102
+Collapsed=0
 
 [Table][0xD0F0C6E3,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
+[Table][0xC9935533,3]
+Column 0  Weight=1.3065
+Column 1  Weight=0.6895
+Column 2  Weight=1.0040
+
+[Table][0x64418101,3]
+RefScale=15
+Column 0  Width=93
+Column 1  Width=116
+Column 2  Width=54
+
 [Docking][Data]
 DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=80,111 Size=1280,699 Split=X
-  DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=1131,699 Split=X
+  DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=970,699 Split=X
     DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=236,699 Selected=0x29EABFBD
-    DockNode    ID=0x00000007 Parent=0x00000003 SizeRef=893,699 Split=Y
+    DockNode    ID=0x00000007 Parent=0x00000003 SizeRef=732,699 Split=Y
       DockNode  ID=0x00000001 Parent=0x00000007 SizeRef=1280,445 CentralNode=1 Selected=0xE192E354
-      DockNode  ID=0x00000002 Parent=0x00000007 SizeRef=1280,252 Selected=0xE1830C86
-  DockNode      ID=0x00000004 Parent=0x8B93E3BD SizeRef=307,699 Selected=0xE7039252
+      DockNode  ID=0x00000002 Parent=0x00000007 SizeRef=1280,252 Selected=0x49278EEE
+  DockNode      ID=0x00000004 Parent=0x8B93E3BD SizeRef=308,699 Selected=0xE7039252
 
