--- a/imgui.ini
+++ b/imgui.ini
@@ -75,7 +75,17 @@ DockId=0x00000002,2
 
 [Window][Create new component?]
 Pos=491,318
-Size=297,102
+Size=297,83
+Collapsed=0
+
+[Window][Create new scene?]
+Pos=508,299
+Size=264,121
+Collapsed=0
+
+[Window][Open scene?]
+Pos=492,299
+Size=297,121
 Collapsed=0
 
 [Table][0xD0F0C6E3,2]
@@ -94,7 +104,7 @@ Column 1  Width=116
 Column 2  Width=54
 
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=80,111 Size=1280,699 Split=X
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=-1412,113 Size=1280,699 Split=X
   DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=970,699 Split=X
     DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=236,699 Selected=0x29EABFBD
     DockNode    ID=0x00000007 Parent=0x00000003 SizeRef=732,699 Split=Y
