--- a/imgui.ini
+++ b/imgui.ini
@@ -104,11 +104,11 @@ Column 1  Width=116
 Column 2  Width=54
 
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=-1412,113 Size=1280,699 Split=X
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=80,111 Size=1280,699 Split=X
   DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=970,699 Split=X
     DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=236,699 Selected=0x29EABFBD
     DockNode    ID=0x00000007 Parent=0x00000003 SizeRef=732,699 Split=Y
       DockNode  ID=0x00000001 Parent=0x00000007 SizeRef=1280,445 CentralNode=1 Selected=0xE192E354
-      DockNode  ID=0x00000002 Parent=0x00000007 SizeRef=1280,252 Selected=0x49278EEE
+      DockNode  ID=0x00000002 Parent=0x00000007 SizeRef=1280,252 Selected=0xFF2336B5
   DockNode      ID=0x00000004 Parent=0x8B93E3BD SizeRef=308,699 Selected=0xE7039252
 
