--- a/imgui.ini
+++ b/imgui.ini
@@ -16,13 +16,13 @@ DockId=0x00000005,0
 
 [Window][Console]
 Pos=183,530
-Size=1007,190
+Size=860,190
 Collapsed=0
 DockId=0x00000002,1
 
 [Window][Inspector]
-Pos=1192,21
-Size=88,699
+Pos=1045,21
+Size=235,699
 Collapsed=0
 DockId=0x00000004,0
 
@@ -34,7 +34,7 @@ DockId=0x00000002,0
 
 [Window][Scene]
 Pos=183,21
-Size=1007,507
+Size=860,507
 Collapsed=0
 DockId=0x00000001,0
 
@@ -45,20 +45,20 @@ Collapsed=0
 DockId=0x00000001,1
 
 [Window][Dear ImGui Demo]
-Pos=1192,21
-Size=88,699
+Pos=1045,21
+Size=235,699
 Collapsed=0
 DockId=0x00000004,1
 
 [Window][File Browser]
 Pos=183,530
-Size=1007,190
+Size=860,190
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][GameScene]
 Pos=183,21
-Size=1007,507
+Size=860,507
 Collapsed=0
 DockId=0x00000001,1
 
@@ -69,7 +69,7 @@ Collapsed=0
 
 [Window][Debugger]
 Pos=183,530
-Size=1007,190
+Size=860,190
 Collapsed=0
 DockId=0x00000002,2
 
@@ -105,10 +105,10 @@ Column 2  Width=54
 
 [Docking][Data]
 DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=80,111 Size=1280,699 Split=X
-  DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=1190,699 Split=X
+  DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=1043,699 Split=X
     DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=181,699 Selected=0x29EABFBD
-    DockNode    ID=0x00000007 Parent=0x00000003 SizeRef=1007,699 Split=Y
-      DockNode  ID=0x00000001 Parent=0x00000007 SizeRef=1280,507 CentralNode=1 Selected=0xE192E354
+    DockNode    ID=0x00000007 Parent=0x00000003 SizeRef=860,699 Split=Y
+      DockNode  ID=0x00000001 Parent=0x00000007 SizeRef=1280,507 CentralNode=1 Selected=0xD76812E7
       DockNode  ID=0x00000002 Parent=0x00000007 SizeRef=1280,190 Selected=0xFF2336B5
-  DockNode      ID=0x00000004 Parent=0x8B93E3BD SizeRef=88,699 Selected=0xE7039252
+  DockNode      ID=0x00000004 Parent=0x8B93E3BD SizeRef=235,699 Selected=0xE7039252
 
