WIP mesh browsing and fix CMakeLists
Remove component_template

Use npos as static

WIP mesh browsing and fix CMakeLists

Remove component_template

Use npos as static

WIP Model inspecting

skeletal models are reflected

Save and load Model

skeletal models are serialized

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,6 +80,7 @@ set(MATHS_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/maths/include
 set(LIB_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/lib
                     ${PROJECT_SOURCE_DIR}/lib/stb_image
                     ${PROJECT_SOURCE_DIR}/lib/miniaudio
+                    ${PROJECT_SOURCE_DIR}/lib/Jolt
 )
 
 option(EXECUTION_SOURCE_IN_BUILD_DIRECTORY "The directory where the program will be executed and find ressources from" OFF)
