--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -1,9 +1,9 @@
 add_library(GameFrakkas STATIC
         src/game/world.cpp
-		src/game/fps_movement.cpp
-		src/game/player_movement.cpp
-		src/game/follow_camera.cpp
-		src/game/lowcomponent/component_register.cpp
+        assets/Scripts/fps_movement.cpp
+        assets/Scripts/player_movement.cpp
+        assets/Scripts/follow_camera.cpp
+        src/game/component_register.cpp
         ${PROJECT_SOURCE_DIR}/lib/glad.c
 )
 
@@ -11,6 +11,7 @@ target_include_directories(GameFrakkas
                            PRIVATE include
                            PRIVATE ${ENGINE_INCLUDE_DIR}
                            PRIVATE ${MATHS_INCLUDE_DIR}
+                           PRIVATE ${PROJECT_SOURCE_DIR}/game/assets/Scripts
                            PRIVATE ${imgui_SOURCE_DIR}
                            PRIVATE ${sdl_INCLUDE_DIR}
                            PRIVATE ${LIB_INCLUDE_DIR}
