--- a/imgui.ini
+++ b/imgui.ini
@@ -10,57 +10,57 @@ Collapsed=0
 
 [Window][Hierarchy]
 Pos=0,21
-Size=181,699
+Size=271,193
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Console]
-Pos=183,530
-Size=860,190
+Pos=0,381
+Size=945,339
 Collapsed=0
-DockId=0x00000002,1
+DockId=0x00000008,0
 
 [Window][Inspector]
-Pos=1045,21
-Size=235,699
+Pos=947,21
+Size=333,185
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x0000000B,0
 
 [Window][ResourceViewer]
 Pos=200,444
 Size=659,276
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000009,0
 
 [Window][Scene]
-Pos=183,21
-Size=860,507
+Pos=273,21
+Size=672,193
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000006,0
 
 [Window][Game]
 Pos=197,21
 Size=847,467
 Collapsed=0
-DockId=0x00000001,1
+DockId=0x00000006,1
 
 [Window][Dear ImGui Demo]
-Pos=1045,21
-Size=235,699
+Pos=947,21
+Size=333,185
 Collapsed=0
-DockId=0x00000004,1
+DockId=0x0000000B,1
 
 [Window][File Browser]
-Pos=183,530
-Size=860,190
+Pos=0,216
+Size=514,163
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000009,0
 
 [Window][GameScene]
-Pos=183,21
-Size=860,507
+Pos=273,21
+Size=672,193
 Collapsed=0
-DockId=0x00000001,1
+DockId=0x00000006,1
 
 [Window][Example: Property editor]
 Pos=97,69
@@ -68,10 +68,10 @@ Size=868,625
 Collapsed=0
 
 [Window][Debugger]
-Pos=183,530
-Size=860,190
+Pos=516,216
+Size=429,163
 Collapsed=0
-DockId=0x00000002,2
+DockId=0x0000000A,0
 
 [Window][Create new component?]
 Pos=491,318
@@ -88,6 +88,18 @@ Pos=492,299
 Size=297,121
 Collapsed=0
 
+[Window][Resources Viewer]
+Pos=947,208
+Size=333,512
+Collapsed=0
+DockId=0x0000000C,0
+
+[Window][Dear ImGui Metrics/Debugger]
+Pos=516,216
+Size=429,163
+Collapsed=0
+DockId=0x0000000A,1
+
 [Table][0xD0F0C6E3,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
@@ -103,12 +115,40 @@ Column 0  Width=93
 Column 1  Width=116
 Column 2  Width=54
 
+[Table][0x9A16B070,4]
+RefScale=15
+Column 0  Width=40
+Column 1  Width=101
+Column 2  Width=59
+Column 3  Width=70
+
+[Table][0xDA36A7E0,6]
+RefScale=15
+Column 0  Width=38 Sort=0v
+Column 1  Width=76
+Column 2  Width=77
+Column 3  Width=67
+Column 4  Weight=1.0000
+Column 5  Width=-1
+
+[Table][0x0FB9D3D7,4]
+Column 0  Weight=1.1767
+Column 1  Weight=0.3629
+Column 2  Weight=0.2025
+Column 3  Weight=2.2579
+
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=80,111 Size=1280,699 Split=X
-  DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=1043,699 Split=X
-    DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=181,699 Selected=0x29EABFBD
-    DockNode    ID=0x00000007 Parent=0x00000003 SizeRef=860,699 Split=Y
-      DockNode  ID=0x00000001 Parent=0x00000007 SizeRef=1280,507 CentralNode=1 Selected=0xD76812E7
-      DockNode  ID=0x00000002 Parent=0x00000007 SizeRef=1280,190 Selected=0xFF2336B5
-  DockNode      ID=0x00000004 Parent=0x8B93E3BD SizeRef=235,699 Selected=0xE7039252
+DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=80,111 Size=1280,699 Split=X
+  DockNode        ID=0x00000003 Parent=0x8B93E3BD SizeRef=945,699 Split=Y
+    DockNode      ID=0x00000001 Parent=0x00000003 SizeRef=1280,310 Split=X Selected=0xE192E354
+      DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=271,624 Selected=0x29EABFBD
+      DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=672,624 CentralNode=1 Selected=0xE192E354
+    DockNode      ID=0x00000002 Parent=0x00000003 SizeRef=1280,504 Split=Y Selected=0xFF2336B5
+      DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=1203,163 Split=X Selected=0xFF2336B5
+        DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=514,95 Selected=0xFF2336B5
+        DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=429,95 Selected=0xE1830C86
+      DockNode    ID=0x00000008 Parent=0x00000002 SizeRef=1203,339 Selected=0x49278EEE
+  DockNode        ID=0x00000004 Parent=0x8B93E3BD SizeRef=333,699 Split=Y Selected=0xE7039252
+    DockNode      ID=0x0000000B Parent=0x00000004 SizeRef=333,185 Selected=0xE7039252
+    DockNode      ID=0x0000000C Parent=0x00000004 SizeRef=333,512 Selected=0x68C0B293
 
