Open resources files and udpate serialization stuffs

--- a/imgui.ini
+++ b/imgui.ini
@@ -10,21 +10,21 @@ Collapsed=0
 
 [Window][Hierarchy]
 Pos=0,21
-Size=271,193
+Size=271,457
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Console]
-Pos=0,381
-Size=945,339
+Pos=643,480
+Size=637,240
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x0000000A,1
 
 [Window][Inspector]
-Pos=947,21
-Size=333,185
+Pos=1103,21
+Size=177,457
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x00000004,0
 
 [Window][ResourceViewer]
 Pos=200,444
@@ -34,33 +34,33 @@ DockId=0x00000009,0
 
 [Window][Scene]
 Pos=273,21
-Size=672,193
+Size=828,457
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000003,0
 
 [Window][Game]
 Pos=197,21
 Size=847,467
 Collapsed=0
-DockId=0x00000006,1
+DockId=0x00000003,1
 
 [Window][Dear ImGui Demo]
 Pos=947,21
 Size=333,185
 Collapsed=0
-DockId=0x0000000B,1
+DockId=0x8B93E3BD,1
 
 [Window][File Browser]
-Pos=0,216
-Size=514,163
+Pos=0,480
+Size=641,240
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][GameScene]
 Pos=273,21
-Size=672,193
+Size=828,457
 Collapsed=0
-DockId=0x00000006,1
+DockId=0x00000003,1
 
 [Window][Example: Property editor]
 Pos=97,69
@@ -68,8 +68,8 @@ Size=868,625
 Collapsed=0
 
 [Window][Debugger]
-Pos=516,216
-Size=429,163
+Pos=643,480
+Size=637,240
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -89,16 +89,16 @@ Size=297,121
 Collapsed=0
 
 [Window][Resources Viewer]
-Pos=947,208
-Size=333,512
+Pos=0,480
+Size=641,240
 Collapsed=0
-DockId=0x0000000C,0
+DockId=0x00000009,1
 
 [Window][Dear ImGui Metrics/Debugger]
 Pos=516,216
 Size=429,163
 Collapsed=0
-DockId=0x0000000A,1
+DockId=0x00000009,1
 
 [Table][0xD0F0C6E3,2]
 Column 0  Weight=1.0000
@@ -138,17 +138,13 @@ Column 2  Weight=0.2025
 Column 3  Weight=2.2579
 
 [Docking][Data]
-DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=80,111 Size=1280,699 Split=X
-  DockNode        ID=0x00000003 Parent=0x8B93E3BD SizeRef=945,699 Split=Y
-    DockNode      ID=0x00000001 Parent=0x00000003 SizeRef=1280,310 Split=X Selected=0xE192E354
-      DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=271,624 Selected=0x29EABFBD
-      DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=672,624 CentralNode=1 Selected=0xE192E354
-    DockNode      ID=0x00000002 Parent=0x00000003 SizeRef=1280,504 Split=Y Selected=0xFF2336B5
-      DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=1203,163 Split=X Selected=0xFF2336B5
-        DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=514,95 Selected=0xFF2336B5
-        DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=429,95 Selected=0xE1830C86
-      DockNode    ID=0x00000008 Parent=0x00000002 SizeRef=1203,339 Selected=0x49278EEE
-  DockNode        ID=0x00000004 Parent=0x8B93E3BD SizeRef=333,699 Split=Y Selected=0xE7039252
-    DockNode      ID=0x0000000B Parent=0x00000004 SizeRef=333,185 Selected=0xE7039252
-    DockNode      ID=0x0000000C Parent=0x00000004 SizeRef=333,512 Selected=0x68C0B293
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=80,111 Size=1280,699 Split=Y
+  DockNode      ID=0x00000001 Parent=0x8B93E3BD SizeRef=1280,457 Split=X Selected=0xE192E354
+    DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=271,624 Selected=0x29EABFBD
+    DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=828,624 Split=X Selected=0xE192E354
+      DockNode  ID=0x00000003 Parent=0x00000006 SizeRef=828,444 CentralNode=1 Selected=0xE192E354
+      DockNode  ID=0x00000004 Parent=0x00000006 SizeRef=177,444 Selected=0xE7039252
+  DockNode      ID=0x00000002 Parent=0x8B93E3BD SizeRef=1280,240 Split=X Selected=0xFF2336B5
+    DockNode    ID=0x00000009 Parent=0x00000002 SizeRef=551,125 Selected=0xFF2336B5
+    DockNode    ID=0x0000000A Parent=0x00000002 SizeRef=548,125 Selected=0x49278EEE
 
