--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -5,21 +5,21 @@ project(Game
 )
 
 add_library(${PROJECT_NAME} STATIC
-			assets/scripts/portal.cpp
+			assets/Scripts/portal.cpp
 			assets/Scripts/physic_goal_trigger.cpp
 			assets/Scripts/physic_ball_object.cpp
 			assets/Scripts/physic_ball_trigger.cpp
 			assets/Scripts/physic_player.cpp
 			assets/Scripts/level_selector.cpp
 			assets/Scripts/portal_manager.cpp
-			assets/scripts/life_item.cpp
-			assets/scripts/pause_trigger.cpp
-			assets/scripts/life.cpp
-        	assets/scripts/game_over_trigger.cpp
-			assets/scripts/player_weapon.cpp
-			assets/scripts/enemy_weapon.cpp
-        	assets/scripts/enemy_stats.cpp
-			assets/scripts/enemy_mesh_rotation.cpp
+			assets/Scripts/life_item.cpp
+			assets/Scripts/pause_trigger.cpp
+			assets/Scripts/life.cpp
+        	assets/Scripts/game_over_trigger.cpp
+			assets/Scripts/player_weapon.cpp
+			assets/Scripts/enemy_weapon.cpp
+        	assets/Scripts/enemy_stats.cpp
+			assets/Scripts/enemy_mesh_rotation.cpp
 			assets/Scripts/player.cpp
 			assets/Scripts/spawner.cpp
 			assets/Scripts/skeleton.cpp
@@ -28,7 +28,7 @@ add_library(${PROJECT_NAME} STATIC
 			assets/Scripts/follow_camera.cpp
 			assets/Scripts/player_mesh_rotation.cpp
  		    assets/Scripts/menu_script.cpp
-        )
+)
 
 target_include_directories(${PROJECT_NAME}
 		                   PUBLIC include
