--- a/imgui.ini
+++ b/imgui.ini
@@ -10,19 +10,19 @@ Collapsed=0
 
 [Window][Hierarchy]
 Pos=0,21
-Size=271,457
+Size=217,475
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Console]
-Pos=643,480
-Size=637,240
+Pos=643,498
+Size=637,222
 Collapsed=0
 DockId=0x0000000A,1
 
 [Window][Inspector]
-Pos=1103,21
-Size=177,457
+Pos=1007,21
+Size=273,475
 Collapsed=0
 DockId=0x00000004,0
 
@@ -33,8 +33,8 @@ Collapsed=0
 DockId=0x00000009,0
 
 [Window][Scene]
-Pos=273,21
-Size=828,457
+Pos=219,21
+Size=786,475
 Collapsed=0
 DockId=0x00000003,0
 
@@ -51,14 +51,14 @@ Collapsed=0
 DockId=0x8B93E3BD,1
 
 [Window][File Browser]
-Pos=0,480
-Size=641,240
+Pos=0,498
+Size=641,222
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][GameScene]
-Pos=273,21
-Size=828,457
+Pos=219,21
+Size=786,475
 Collapsed=0
 DockId=0x00000003,1
 
@@ -68,8 +68,8 @@ Size=868,625
 Collapsed=0
 
 [Window][Debugger]
-Pos=643,480
-Size=637,240
+Pos=643,498
+Size=637,222
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -89,8 +89,8 @@ Size=297,121
 Collapsed=0
 
 [Window][Resources Viewer]
-Pos=0,480
-Size=641,240
+Pos=0,498
+Size=641,222
 Collapsed=0
 DockId=0x00000009,1
 
@@ -144,12 +144,12 @@ Column 3  Weight=2.2579
 
 [Docking][Data]
 DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=128,93 Size=1280,699 Split=Y
-  DockNode      ID=0x00000001 Parent=0x8B93E3BD SizeRef=1280,457 Split=X Selected=0xE192E354
-    DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=271,624 Selected=0x29EABFBD
-    DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=828,624 Split=X Selected=0xE192E354
-      DockNode  ID=0x00000003 Parent=0x00000006 SizeRef=828,444 CentralNode=1 Selected=0xE192E354
-      DockNode  ID=0x00000004 Parent=0x00000006 SizeRef=177,444 Selected=0xE7039252
-  DockNode      ID=0x00000002 Parent=0x8B93E3BD SizeRef=1280,240 Split=X Selected=0xFF2336B5
+  DockNode      ID=0x00000001 Parent=0x8B93E3BD SizeRef=1280,475 Split=X Selected=0xE192E354
+    DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=217,624 Selected=0x29EABFBD
+    DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=1061,624 Split=X Selected=0xE192E354
+      DockNode  ID=0x00000003 Parent=0x00000006 SizeRef=786,444 CentralNode=1 Selected=0xD76812E7
+      DockNode  ID=0x00000004 Parent=0x00000006 SizeRef=273,444 Selected=0xE7039252
+  DockNode      ID=0x00000002 Parent=0x8B93E3BD SizeRef=1280,222 Split=X Selected=0xFF2336B5
     DockNode    ID=0x00000009 Parent=0x00000002 SizeRef=551,125 Selected=0xFF2336B5
     DockNode    ID=0x0000000A Parent=0x00000002 SizeRef=548,125 Selected=0x49278EEE
 
